# CONTRACTIQ

./: .dockerignore  .vercelignore  Dockerfile  README.md  constants.py  docker-compose.yml  env.example  latest_eval4.txt  latest_eval5.txt  latest_eval6.txt  latest_eval_new.txt  patch_css.py  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt  run_eval.py  sample_contract.txt  sample_contract_comparison.txt  setup.py  start.sh
api/: main.py
config/: config.yaml
eval_results/: eval_output_20260331_224446.json  eval_output_20260407_095948.json  eval_output_20260407_100654.json  eval_output_20260407_100720.json
frontend/: .vercelignore  README.md  package-lock.json  package.json
infrastructure/: document-portal-cf.yaml
model/: models.py
notebook/: exception_experiment.ipynb
prompt/: prompt_library.py
scripts/: bulk_ingestion.py
src/agent/: __init__.py  contract_graph.py  nodes.py  state.py
src/auth/: jwt_handler.py
src/cache/: redis_cache.py
src/database/: supabase_client.py  supabase_db.py  supabase_storage.py
src/document_analyzer/: data_analysis.py  key_term_extractor.py
src/document_chat/: hybrid_retrieval.py  sse_streaming.py
src/document_compare/: document_comparator.py
src/document_ingestion/: data_ingestion.py
src/eval/: ragas_evaluator.py
src/export/: __init__.py  (+3 more)
static/: style.css
templates/: index.html  login.html
tests/: test_billing.py  test_supabase_mock.py  test_unit_cases.py
utils/: document_ops.py  file_io.py  langsmith_tracer.py  model_loader.py  rate_limiter.py  test_utils.py
(+10 files in other folders)
