[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document_portal"
version = "0.1"
description = "An intelligent document analysis and comparison system powered by LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Bhavjeet Singh"}
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-groq==0.3.6",
    "langchain-google-genai==2.1.8",
    "faiss-cpu==1.11.0.post1",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "PyMuPDF==1.26.3",
    "structlog==25.4.0",
    "docx2txt==0.9",
    "python-docx==1.1.2",
    "streamlit==1.47.1",
    "pytest==8.4.1",
    "pypdf==5.8.0",
    "rank_bm25==0.2.2",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "slowapi==0.1.9",
    "redis==5.0.1",
    "celery==5.3.6",
    "ragas==0.2.8",
    "datasets==2.18.0",
    "sentence-transformers>=2.2.0",
    "langchain-huggingface>=0.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "pylint", "ipykernel"]

[tool.setuptools]
packages = ["api", "config", "exception", "infrastructure"]

